# ultimate_ninja

./: .gitignore  Cargo.toml  README.md  config.json
resources/levels/: level0.txt  level1.txt  level10.txt  level11.txt  level12.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt  tutorial1.txt  tutorial2.txt  tutorial3.txt  tutorial4.txt
settings/: config.json
src/: animation_component.rs  assets.rs  camera_component.rs  collision_component.rs  compute_move_component.rs  constants.rs  dead_component.rs  entities.rs  level.rs  look_component.rs  main.rs  mouse_input_handler.rs  move_component.rs  network_system.rs  overlay_system.rs  particle_system.rs  resources.tar  sound_collection.rs  sprite_component.rs  stamina_component.rs  teleport_component.rs  tile_component.rs  transform_component.rs  util.rs
src/entities/: exit.rs  guard.rs  guards.rs  player.rs  target.rs  wall.rs
src/entities/guards/: guard_basic.rs  guard_heavy.rs  guard_scout.rs
web_build/: index.html
